@@ -27,6 +27,8 @@ Version 1.2:
   in the IRC core, and charset mismatches are detected (if possible) and the
   user is asked to resolve this before continuing. Also, UTF-8 is the default
   setting now, since that's how the world seems to work these days.
+- One can now keep hashed passwords in bitlbee.conf instead of the cleartext
+  version.
 - Most important change: New file format for user data (accounts, nicks and
   settings). Migration to the new format should happen transparently,
   BitlBee will read the old files and once you quit/save it will save in the
